[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/fonts/UbuntuMono-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sources/menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://resources/ui/Buttons/CGB01-blue_M_rounded_btn.png" type="Texture" id=3]
[ext_resource path="res://resources/backgrounds/background_6.png" type="Texture" id=4]
[ext_resource path="res://resources/backgrounds/background_3.png" type="Texture" id=5]
[ext_resource path="res://resources/backgrounds/logo.png" type="Texture" id=6]
[ext_resource path="res://resources/backgrounds/background_7.png" type="Texture" id=7]
[ext_resource path="res://resources/backgrounds/background_1.png" type="Texture" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_strength = 1.28
glow_blend_mode = 1
glow_hdr_threshold = 0.8
adjustment_brightness = 0.71

[sub_resource type="Animation" id=8]
resource_name = "ModulateVariation"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background/Moon:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.35, -0.25, 0, 0.25, 0, 1.6, -0.25, 0, 0.25, 0, 1.35, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Background/Moon:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.35, -0.25, 0, 0.25, 0, 1.6, -0.25, 0, 0.25, 0, 1.35, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Background/Moon:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1.35, -0.25, 0, 0.25, 0, 1.75, -0.25, 0, 0.25, 0, 1.35, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Background/Moon:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background/Moon:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Background/Moon:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Background/Moon:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Background/Moon:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec2 direction = vec2(0.0, -1.0);
uniform float speed_scale = 0.5;

void fragment(){
	vec2 move = direction * TIME * speed_scale;
	COLOR = texture(TEXTURE, UV + move);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 7 )
shader_param/direction = Vector2( -1, 0 )
shader_param/speed_scale = 0.035

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironmentMenu" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="AnimationPlayerMenu" type="AnimationPlayer" parent="."]
anims/ModulateVariation = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Sprite" parent="Background"]
position = Vector2( 360, 640 )
scale = Vector2( 1.40625, 5.33333 )
texture = ExtResource( 8 )

[node name="Moon" type="Sprite" parent="Background"]
position = Vector2( 620, 100 )
scale = Vector2( 2.50962, 2.50962 )
texture = ExtResource( 4 )

[node name="InfinityClouds" type="Sprite" parent="Background"]
modulate = Color( 2, 2, 2.7, 1 )
material = SubResource( 2 )
position = Vector2( -0.00012207, 312 )
scale = Vector2( 3.7551, 3.7551 )
texture = ExtResource( 7 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )

[node name="InfinityMontains" type="Sprite" parent="Background"]
modulate = Color( 1.3, 1.3, 2, 1 )
material = SubResource( 2 )
position = Vector2( -9.53674e-07, 808 )
scale = Vector2( 1.8, 1.96667 )
texture = ExtResource( 5 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )

[node name="StartButton" type="TouchScreenButton" parent="."]
modulate = Color( 0.8, 0.8, 0.901961, 1 )
position = Vector2( 250, 893 )
normal = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -43.0
margin_right = 108.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 6 )
text = "Iniciar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="."]
modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
position = Vector2( 384, 1016 )
texture = ExtResource( 6 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
